--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="4dp">
+    android:maxHeight="300dp"
+    android:layout_margin="8dp"
+    app:cardCornerRadius="12dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -26,6 +28,9 @@
             android:layout_height="wrap_content"
             android:background="@color/purple_500"
             android:textSize="20sp"
+            android:layout_marginBottom="12dp"
+            android:layout_marginStart="16dp"
+            android:paddingHorizontal="4dp"
             app:layout_constraintBottom_toBottomOf="@+id/nasa_image"
             app:layout_constraintStart_toStartOf="parent"
             tools:text="Planet" />
