--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,12 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.krolikowski.dook.main.MainActivity">
     <item
-        android:id="@+id/first_fragment"
-        android:icon="@drawable/ic_fragment_first"
+        android:id="@+id/list_fragment"
         android:title="@string/first_fragment_label" />
 
     <item
-        android:id="@+id/second_fragment"
-        android:icon="@drawable/ic_fragment_second"
+        android:id="@+id/details_fragment"
         android:title="@string/second_fragment_label" />
 </menu>
