--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,22 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/first_fragment">
+    app:startDestination="@id/list_fragment">
 
     <fragment
-        android:id="@+id/first_fragment"
-        android:name="com.krolikowski.dook.first.FirstFragment"
+        android:id="@+id/list_fragment"
+        android:name="com.krolikowski.dook.list.ListFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/fragment_list">
         <action
             android:id="@+id/action_first_fragment_to_second_fragment"
-            app:destination="@id/second_fragment" />
+            app:destination="@id/details_fragment" />
     </fragment>
     <fragment
-        android:id="@+id/second_fragment"
-        android:name="com.krolikowski.dook.second.SecondFragment"
+        android:id="@+id/details_fragment"
+        android:name="com.krolikowski.dook.details.DetailsFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        tools:layout="@layout/fragment_details">
         <argument
             android:name="NasaObject"
             app:argType="com.krolikowski.dook.networking.entities.ImageEntity" />
