--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -24,18 +24,18 @@
             android:id="@+id/copyright_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:text="Copyright: "
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image"
-            android:text="Copyright: " />
+            app:layout_constraintTop_toBottomOf="@id/image" />
 
         <TextView
             android:id="@+id/copyright_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@+id/copyright_text"
-            app:layout_constraintTop_toTopOf="@+id/copyright_text"
+            app:layout_constraintStart_toEndOf="@id/copyright_text"
+            app:layout_constraintTop_toTopOf="@id/copyright_text"
             tools:text="copyright" />
 
         <TextView
@@ -46,14 +46,14 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/copyright_value" />
+            app:layout_constraintTop_toBottomOf="@id/copyright_value" />
 
         <TextView
             android:id="@+id/date_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@+id/date_text"
-            app:layout_constraintTop_toTopOf="@+id/date_text"
+            app:layout_constraintStart_toEndOf="@id/date_text"
+            app:layout_constraintTop_toTopOf="@id/date_text"
             tools:text="date" />
 
         <TextView
@@ -63,15 +63,15 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/date_value"
+            app:layout_constraintTop_toBottomOf="@id/date_value"
             android:text="Description: " />
 
         <TextView
             android:id="@+id/description_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@+id/description_text"
-            app:layout_constraintTop_toTopOf="@+id/description_text"
+            app:layout_constraintStart_toEndOf="@id/description_text"
+            app:layout_constraintTop_toTopOf="@id/description_text"
             tools:text="description" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
