--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -31,6 +31,8 @@
             android:layout_marginBottom="12dp"
             android:layout_marginStart="16dp"
             android:paddingHorizontal="4dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             app:layout_constraintBottom_toBottomOf="@+id/nasa_image"
             app:layout_constraintStart_toStartOf="parent"
             tools:text="Planet" />
