--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/list_fragment"
         android:name="com.krolikowski.dook.list.ListFragment"
-        android:label="@string/first_fragment_label"
+        android:label="@string/main_title"
         tools:layout="@layout/fragment_list">
         <action
             android:id="@+id/action_first_fragment_to_second_fragment"
@@ -17,7 +17,6 @@
     <fragment
         android:id="@+id/details_fragment"
         android:name="com.krolikowski.dook.details.DetailsFragment"
-        android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_details">
         <argument
             android:name="NasaObject"
