--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,5 +28,6 @@
         app:layout_constraintTop_toBottomOf="@+id/toolBar"
         android:layout_marginVertical="8dp"
         app:navGraph="@navigation/nav_graph"
-        tools:layout="@layout/fragment_list" />
+        tools:layout="@layout/fragment_list"
+        tools:ignore="FragmentTagUsage" />
 </androidx.constraintlayout.widget.ConstraintLayout>
