--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -21,7 +21,7 @@
         android:id="@+id/images_count_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pictures number"
+        android:text="@string/pictures_number"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/images_count_number_picker"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,8 @@
         android:visibility="gone"
         android:inputType="number"
         android:text="3"
-        android:importantForAutofill="no" />
+        android:importantForAutofill="no"
+        tools:ignore="HardcodedText,LabelFor" />
 
     <ImageView
         android:id="@+id/error_image"
