--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,17 +3,17 @@
     tools:context="com.krolikowski.dook.main.MainActivity">
     <item
         android:id="@+id/enable_asteroid_alarm"
-        android:title="@string/first_fragment_label" />
+        android:title="@string/enable_asteroid_alarm" />
 
     <item
         android:id="@+id/start_asteroid_alarm"
-        android:title="@string/second_fragment_label" />
+        android:title="@string/start_asteroid_alarm" />
 
     <item
         android:id="@+id/stop_asteroid_alarm"
-        android:title="@string/second_fragment_label" />
+        android:title="@string/stop_asteroid_alarm" />
 
     <item
         android:id="@+id/bind_service"
-        android:title="@string/second_fragment_label" />
+        android:title="@string/bind_service" />
 </menu>
