--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:maxHeight="300dp"
     android:layout_margin="8dp"
     app:cardCornerRadius="12dp">
 
@@ -17,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
+            android:maxHeight="300dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -27,14 +27,17 @@
             android:id="@+id/nasa_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/purple_500"
-            android:textSize="20sp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="12dp"
-            android:layout_marginStart="16dp"
-            android:paddingHorizontal="4dp"
+            android:background="@color/purple_500"
             android:ellipsize="end"
             android:maxLines="1"
+            android:paddingHorizontal="4dp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/nasa_image"
+            app:layout_constraintEnd_toEndOf="@+id/nasa_image"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             tools:text="Planet" />
     </androidx.constraintlayout.widget.ConstraintLayout>
